# pytf3d

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
.github/workflows/: main.yml
src/pytf3d/: __init__.py  _rotation.py  _version.py
src/pytf3d/testing/: __init__.py  _strategies.py
src/pytf3d/typing/: __init__.py  _types.py
src/pytf3d/utils/: __init__.py  _matrices.py
test/: conftest.py  test_dummy.py  test_rotation.py
